Update GAS_URL and LIFF_ID

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     </form>
 
     <script>
-        const GAS_URL = "ここにStep 2で発行したGASのURLを入れる";
-        const LIFF_ID = "ここにStep 1で発行したLIFF IDを入れる";
+        const GAS_URL = "https://script.google.com/macros/s/AKfycbyeKMsT28UBmqN28gY2GJNuRh4cBFbbzitKOj4LSsdh_rTHeLHL_PZOGXwGvc4aLGTmNw/exec";
+        const LIFF_ID = "2009216134-x9TsRzm8";
 
         async function main() {
             await liff.init({ liffId: LIFF_ID });
