--- a/index.html
+++ b/index.html
@@ -158,6 +158,37 @@
         .btn-danger {
             background: #ff4444;
         }
+
+        /* 送信中オーバーレイ */
+        #sendingOverlay {
+            display: none;
+            position: fixed;
+            inset: 0;
+            background: rgba(0, 0, 0, 0.7);
+            z-index: 200;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+        }
+
+        #sendingOverlay.active {
+            display: flex;
+        }
+
+        .spinner {
+            width: 40px;
+            height: 40px;
+            border: 4px solid rgba(255, 255, 255, 0.3);
+            border-top-color: #fff;
+            border-radius: 50%;
+            animation: spin 0.8s linear infinite;
+            margin-bottom: 16px;
+        }
+
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
     </style>
 </head>
 
@@ -234,6 +265,12 @@
         </div>
     </div>
 
+    <!-- 送信中オーバーレイ -->
+    <div id="sendingOverlay">
+        <div class="spinner"></div>
+        <p>送信中...</p>
+    </div>
+
     <script>
         const GAS_URL = "https://script.google.com/macros/s/AKfycbxqdS2KfwpL8PuqlbRaPPgyrh7FNAPtLPpMDZw-O2UIa9UdDiH0JdtsyM_BwjrJ2PSeVg/exec";
         const LIFF_ID = "2009216134-x9TsRzm8";
@@ -244,6 +281,10 @@
 
         const confirmModal = document.getElementById('confirmModal');
         const cancelModal = document.getElementById('cancelModal');
+        const sendingOverlay = document.getElementById('sendingOverlay');
+
+        function showSending() { sendingOverlay.classList.add('active'); }
+        function hideSending() { sendingOverlay.classList.remove('active'); }
 
         function formatDate(value) {
             if (!value) return "";
@@ -302,7 +343,7 @@
             confirmModal.classList.remove('active');
             const submitBtn = document.getElementById('submitBtn');
             submitBtn.disabled = true;
-            submitBtn.innerText = '送信中...';
+            showSending();
 
             const postData = {
                 action: formMode === 'edit' ? 'update' : 'new',
@@ -319,12 +360,13 @@
                     headers: { 'Content-Type': 'text/plain' },
                     body: JSON.stringify(postData)
                 });
+                hideSending();
                 alert(formMode === 'edit' ? '予約を変更しました！' : '予約が完了しました！');
             } catch (error) {
                 console.error('Fetch error:', error);
+                hideSending();
                 alert('エラーが発生しました。もう一度お試しください。');
                 submitBtn.disabled = false;
-                submitBtn.innerText = formMode === 'edit' ? '変更を確定する' : '予約を確定する';
                 return;
             }
 
@@ -356,6 +398,7 @@
             cancelModal.classList.remove('active');
             const btn = document.getElementById('cancelModalConfirmBtn');
             btn.disabled = true;
+            showSending();
 
             try {
                 await fetch(GAS_URL, {
@@ -367,9 +410,11 @@
                         reservationId: currentReservation.id
                     })
                 });
+                hideSending();
                 alert('予約をキャンセルしました。');
             } catch (error) {
                 console.error('Fetch error:', error);
+                hideSending();
                 alert('エラーが発生しました。もう一度お試しください。');
                 btn.disabled = false;
                 return;
